# ray-tracing

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a  cmake_install.cmake  entrada.in  main.cpp  main.cpp~  rt  rt.cbp
Files/: earth_jupiter.sdl  earth_jupiter.sdl~  oneplanesphere.sdl  onesphere.sdl  somedepth.sdl  test.pnm  twoplanesphere.sdl  twosphere.sdl
Support/: Header.h  Header.h~  SDL.cpp  SDL.h
