cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(rt)
find_package(OpenGL REQUIRED)
find_package(X11)
include_directories(glfw/include ${OPENGL_INCLUDE_DIRS})
add_subdirectory(glfw)
add_executable(rt main.cpp)
target_link_libraries(rt glfw  ${OPENGL_LIBRARIES} ${GLFW_LIBRARIES})